--- a/ProyectoFinalT/ProyectoFinalT.csproj
+++ b/ProyectoFinalT/ProyectoFinalT.csproj
@@ -68,6 +68,10 @@
 	  <None Remove="Resources\Images\notapunto.png" />
 	  <None Remove="Resources\Images\ojo.png" />
 	  <None Remove="Resources\Images\ojomusica.png" />
+	  <None Remove="Resources\Images\pentagramasdeclavefa.png" />
+	  <None Remove="Resources\Images\pentagramasdeclavesdocuatro.png" />
+	  <None Remove="Resources\Images\pentagramasdeclavesdotres.png" />
+	  <None Remove="Resources\Images\pentagramasdeclavesol.png" />
 	  <None Remove="Resources\Images\progreso.png" />
 	  <None Remove="Resources\Images\punto.png" />
 	  <None Remove="Resources\Images\redonda.png" />
